--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,10 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-security</artifactId>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
