build api query account infomation for partner

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 #Config
+type.account.payment=1
+type.account.none.bank=2
+
+my.bank.code=MY_BANK
+my.bank.id=2
