build api query transfer for partner

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,14 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 #Config
+# 5 minutes
+session.request=300000 
+
 type.account.payment=1
 type.account.none.bank=2
 
 my.bank.code=MY_BANK
 my.bank.id=2
+
+fee.transfer=500
+status.transfer=success
