--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,11 @@
 			<artifactId>bcpg-jdk14</artifactId>
 			<version>1.47</version>
 		</dependency>
-
+		<!-- send email -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
