get transaction sender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,13 @@ status.transfer=success
 
 account.payment=payment
 account.saving=saving
+
+trans.send=send
+trans.debt=debt
+trans.receiver=receiver
+trans.all=all
+
+#role user
+role.customer=CUSTOMER
+role.employer=EMPLOYER
+role.admin=ADMIN
