--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,8 +29,8 @@ status.transfer=success
 #config send mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=langtran.dtnt@gmail.com
-spring.mail.password=lang221454025
+spring.mail.username=ngochung.quang.1310@gmail.com
+spring.mail.password=lbcdjyqjzneezzue
 
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
@@ -47,3 +47,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 account.payment=payment
 account.saving=saving
+
+otp.payment=payment
+otp.debt=debt
