user update password api

--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,12 @@
 			<artifactId>bcprov-jdk15on</artifactId>
 			<version>1.66</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
