--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,8 @@ session.request=300000
 type.account.payment=1
 type.account.none.bank=2
 
-my.bank.code=MY_BANK
-my.bank.id=2
+my.bank.code=LH_BANK
+my.bank.id=1
 
 fee.transfer=500
 status.transfer=success
